netcheck-0.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: netcheck
  namespace: test
  labels:
    app: netcheck
spec:
  selector:
    matchLabels:
      app: netcheck
  template:
    metadata:
      labels:
        app: netcheck
    spec:
      terminationGracePeriodSeconds: 0
      nodeSelector:
        kubernetes.io/os: linux
      tolerations:
      - operator: Exists
      containers:
      - name: netcheck
        image: public.ecr.aws/docker/library/alpine:3.19
        imagePullPolicy: IfNotPresent
        command:
        - sh
        - -c
        - >
          apk add --no-cache curl bind-tools iputils busybox-extras &&
          telnetd -F -p 2323 &
          sleep 10000000
        resources: {}
      restartPolicy: Always
