netcheck.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: netcheck
  namespace: ${NETCHECK_NAMESPACE}
  labels:
    app: netcheck
spec:
  selector:
    matchLabels:
      app: netcheck
  template:
    metadata:
      labels:
        app: netcheck
    spec:
      terminationGracePeriodSeconds: 0
      nodeSelector:
        kubernetes.io/os: linux
      tolerations:
      - operator: Exists
      containers:
      - name: netcheck
        image: ${NETCHECK_IMAGE}
        imagePullPolicy: IfNotPresent
        command:
        - sh
        - -c
        - |
          exec sleep 10000000
        resources: {}
      restartPolicy: Always
