otel-demo-allow-all-0.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: otel-demo-allow-all
  namespace: otel-demo
spec:
  description: "Baseline allow-all (L3/L4) for otel-demo namespace."
  endpointSelector: {}
  ingress:
    - fromEntities:
        - all
  egress:
    - toEntities:
        - all
