otel-demo-allow-all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: otel-demo-allow-all
  namespace: ${OTEL_NAMESPACE}
spec:
  description: "Baseline allow-all (L3/L4) for otel namespace."
  endpointSelector: {}
  ingress:
    - fromEntities:
        - all
  egress:
    - toEntities:
        - all
